# finance_planner

./: .gitignore  README.md  pyproject.toml
docs/: index.html  loan-calculator.html  loan-disbursement.html
docs/loan-calculator/: index.html
docs/loan-calculator/js/: calculator.js
docs/loan-disbursement/js/: disbursement.js
docs/rent-buy/: index.html
docs/rent-buy/js/: calculator.js
loan_calculator_web/: app.py  calculator.py  loan_calculator.py  test_calculator.py
loan_calculator_web/templates/: index.html  results.html
